# matter-pi-gpio-commander

./: .gitignore  GPIO.md  README.md  lighting.py  requirements.txt  run.sh  snapcraft.yaml  test-blink.cpp
.github/: .jira_sync_config.yaml  pull_request_template.md
.github/workflows/: build-and-test-snap.yml  build-snap.yml  issues-to-jira.yml  test-snap.yml
app/: BUILD.gn  README.md
app/lighting-common/: BUILD.gn  lighting-app.matter  lighting-app.zap
app/lighting-common/include/: ColorFormat.h  LightingManager.h
app/lighting-common/src/: ColorFormat.cpp  LightingManager.cpp
app/linux/: .gn  BUILD.gn  LightingAppCommandDelegate.cpp  LightingAppCommandDelegate.h  README.md  args.gni  main.cpp
app/linux/include/: CHIPProjectAppConfig.h  LightingManager.h
app/linux/src/: LightingManager.cpp
app/src/: LightingManager.cpp
snap/: snapcraft.yaml
snap/hooks/: configure  install
tests/: README.md  auth-gpio.sh  go.mod  go.sum  gpio-mock.sh  inject-amd64-arch.sh  snap_test.go
tests/thread_tests/: README.md  constants.go  local.go  remote.go  thread_test.go
