# This file contains partial code copied from:
# https://github.com/project-chip/connectedhomeip/blob/8a4dffc5d/examples/lighting-app/linux/BUILD.gn

# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")

import("${chip_root}/build/chip/tools.gni")
import("${chip_root}/src/app/common_flags.gni")
import("${chip_root}/third_party/imgui/imgui.gni")

assert(chip_build_tools)

import("${chip_root}/examples/common/pigweed/pigweed_rpcs.gni")

config("includes") {
  include_dirs = [
    ".",
    "include",
  ]
}

executable("chip-gpio-app") {
  sources = [
    "LightingAppCommandDelegate.cpp",
    "include/gpiod.h",
    "include/CHIPProjectAppConfig.h",
    "include/LightingManager.h",
    "src/LightingManager.cpp",
    "main.cpp",
  ]

  deps = [
    "${chip_root}/examples/app/lighting-common",
    "${chip_root}/examples/platform/linux:app-main",
    "${chip_root}/src/lib",
    "${chip_root}/third_party/jsoncpp",
  ]

  if (chip_examples_enable_imgui_ui) {
    deps += [
      "${chip_root}/examples/common/imgui_ui",
      "${chip_root}/examples/common/imgui_ui/windows:light",
      "${chip_root}/examples/common/imgui_ui/windows:occupancy_sensing",
      "${chip_root}/examples/common/imgui_ui/windows:qrcode",
    ]
  }

  include_dirs = [ "include" ]

  # The system_rpc_server.cc file is in pigweed and doesn't compile with
  # -Wconversion, remove check for RPC build only.
  cflags = [ "-Wconversion" ]

  libs = [ "gpiod" ]
  ldflags = [
    "-lgpiod"
  ]

  output_dir = root_out_dir
}

group("linux") {
  deps = [ ":chip-gpio-app" ]
}

group("default") {
  deps = [ ":linux" ]
}
